# getter_setter_assignment

./: .gitignore  README.md
getter_setter/: .gitignore  Anchor.toml  package-lock.json  package.json  tsconfig.json
getter_setter/programs/getter_setter/: Cargo.toml
getter_setter/programs/getter_setter/src/: lib.rs
getter_setter/tests/: getter_setter.ts
interacting_program/: Anchor.toml  package-lock.json
interacting_program/programs/interacting_program/: Cargo.toml
interacting_program/programs/interacting_program/src/: lib.rs
scripts/: deploy.sh
